syntax="proto3";
// start gRPC by define service with proto file;

package runchart;

import "google/protobuf/timestamp.proto";

option java_package = "com.demo.runchart";

message DataPoint {
  google.protobuf.Timestamp timestamp = 1;
  string part_number = 2;
  double spec_nominal = 3;
  double spec_tolerance = 4;
  double measurement = 5;
}

message Empty {}

// these service will be generated in java file, and implement on this.
service RunChartService {
  rpc SnapShot(Empty) returns (DataPoint){}
}
